--- a/index.html
+++ b/index.html
@@ -48,8 +48,22 @@
         fetch('https://api.inaturalist.org/v1/observations?taxon_id=48428&place_id=any')
             .then(response => response.json())
             .then(data => {
-                // Exemple : Affiche les données dans la console pour voir ce que tu as récupéré
+                // Affiche les données dans la console pour voir ce que tu as récupéré
                 console.log(data);
+                
+                // Parcourir les résultats et ajouter des marqueurs
+                data.results.forEach(function(observation) {
+                    if (observation.location) { // Assurez-vous qu'il y a une localisation
+                        const lat = observation.location.latitude;
+                        const lon = observation.location.longitude;
+                        const species = observation.taxon ? observation.taxon.name : "Espèce inconnue";
+                        const info = `Espèce : ${species}<br>Date : ${observation.observed_on}`;
+
+                        L.marker([lat, lon])
+                            .addTo(map)
+                            .bindPopup(info);
+                    }
+                });
             })
             .catch(error => {
                 console.error('Erreur lors de la récupération des données :', error);
