--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             {name: "Champignon de Paris", lat: 48.8450, lon: 2.3730, info: "Cultivé dans les caves."}
         ];
 
-        // Ajout de marqueurs pour chaque type de champignon
+        // Ajout de marqueurs pour chaque type de champignon comestible
         mushrooms.forEach(function(mushroom) {
             L.marker([mushroom.lat, mushroom.lon])
                 .addTo(map)
