--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
-        // Ajout d'un marqueur statique pour tester
+        // Ajout d'un marqueur statique pour vérifier la carte
         L.marker([48.8566, 2.3522]) // Coordonnées de Paris
             .addTo(map)
             .bindPopup("Test: Champignon à Paris");
@@ -49,6 +49,7 @@
                             const species = observation.taxon ? observation.taxon.name : "Espèce inconnue";
                             const info = `Espèce : ${species}<br>Date : ${observation.observed_on}`;
 
+                            // Ajoute un marqueur pour chaque observation
                             L.marker([lat, lon])
                                 .addTo(map)
                                 .bindPopup(info);
