--- a/index.html
+++ b/index.html
@@ -3,67 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte des Champignons Comestibles en France</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <title>Carte interactive de champignons</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
-        #map { height: 600px; }
+        #map {
+            height: 100vh;
+        }
+        .filters {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+            background-color: white;
+            padding: 10px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
-    <h1>Carte des Champignons Comestibles</h1>
+
+    <div class="filters">
+        <label for="species">Sélectionner un champignon :</label>
+        <select id="species">
+            <option value="48428">Morille</option>
+            <option value="47170">Cèpe</option>
+            <option value="47843">Girolle</option>
+        </select>
+        <button id="search">Chercher</button>
+    </div>
     <div id="map"></div>
 
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
         // Initialisation de la carte
-        var map = L.map('map').setView([46.6034, 1.8883], 5); // Centre sur la France
+        var map = L.map('map').setView([46.603354, 1.888334], 6); // Centré sur la France
 
-        // Couche de tuiles OpenStreetMap
+        // Ajout des tuiles OpenStreetMap
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
-        // Ajout d'un marqueur statique pour vérifier la carte
-        L.marker([48.8566, 2.3522]) // Coordonnées de Paris
-            .addTo(map)
-            .bindPopup("Test: Champignon à Paris");
-
-        // Récupération des données depuis l'API iNaturalist
-        fetch('https://api.inaturalist.org/v1/observations?taxon_id=48428&place_id=any')
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Erreur HTTP ' + response.status);
-                }
-                return response.json();
-            })
-            .then(data => {
-                console.log(data); // Affiche les données dans la console
-                if (data.results && data.results.length > 0) {
+        // Fonction pour charger les observations de champignons
+        function loadObservations(taxon_id) {
+            fetch(`https://api.inaturalist.org/v1/observations?taxon_id=${taxon_id}&place_id=any`)
+                .then(response => response.json())
+                .then(data => {
                     data.results.forEach(observation => {
-                        if (observation.location && 
-                            observation.location.latitude !== undefined && 
-                            observation.location.longitude !== undefined) {
-                            
-                            const lat = observation.location.latitude;
-                            const lon = observation.location.longitude;
+                        if (observation.geojson && observation.geojson.coordinates) {
+                            const lat = observation.geojson.coordinates[1];
+                            const lon = observation.geojson.coordinates[0];
                             const species = observation.taxon ? observation.taxon.name : "Espèce inconnue";
                             const info = `Espèce : ${species}<br>Date : ${observation.observed_on}`;
-
-                            // Ajoute un marqueur pour chaque observation
-                            L.marker([lat, lon])
-                                .addTo(map)
-                                .bindPopup(info);
-                        } else {
-                            console.warn('Observation sans coordonnées:', observation);
+                            L.marker([lat, lon]).addTo(map).bindPopup(info);
                         }
                     });
-                } else {
-                    console.log('Aucune observation trouvée.');
-                }
-            })
-            .catch(error => {
-                console.error('Erreur lors de la récupération des données :', error);
-            });
+                })
+                .catch(error => console.error('Erreur lors de la récupération des données :', error));
+        }
+
+        // Event listener sur le bouton "Chercher"
+        document.getElementById('search').addEventListener('click', () => {
+            const species = document.getElementById('species').value;
+            loadObservations(species);
+        });
+
+        // Chargement initial (Morille par défaut)
+        loadObservations(48428);
     </script>
 </body>
 </html>
